@@ -12,6 +12,7 @@ Bugs fixed:
 - 2934540 sfcb may respond with incorrect association provider
 - 2935931 Indications to file:// urls never fail.
 - 2937577 Some SLP-specific code not ifdef'd
+- 2939874 Serious provider id mismatch after provider reload
 
 Changes in 1.3.6
 ================
