@@ -1,3 +1,8 @@
+2010-01-28  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* providerRegister.c:
+	[ 2939874 ] Serious provider id mismatch after provider reload
+
 2010-01-22  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* internalProvider.c:
